--- a/prontocloud/css/styles.css
+++ b/prontocloud/css/styles.css
@@ -1,30 +1,27 @@
-
 html {
     font-size: 62.5%;
+    
 }
 
 body {
-    background-color: #f5f5f5; 
+    background-color: #f5f5f5;
     font-family: 'Open Sans', sans-serif;
 }
 
 .main-container {
     display: block;
-    width: 100vw;
-    margin: 0 auto;
+    max-width: 100vw;
 }
 
 .container {
     display: block;
     float: left;
     padding: 20px;
-    max-width: 100%;
-    margin: 0 auto;
-    max-width: 1198px;
+    width: 100%;
 }
 
-header {
-    background: #fff;
+header{
+    background-color: #fff;
     display: block;
     float: left;
     padding: 20px;
@@ -53,36 +50,15 @@ h3 {
 
 h4 {
     font-size: 1.6rem;
-    color: #385874;
+    color: #254159;
     margin-bottom: 10px;
     padding-top: 10px;
 }
 
 p {
     margin-bottom: 10px;
-    line-height: 1.4;
+    line-height: 1.4; /*Espaçamento entre linhas*/
     color: #333;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-#tenho-interesse {
-    background-color: #b8c8d6;
-    width: 100%;
-}
-
-#tenho-interesse form,
-.cognito.c-med .c-forms-form,
-.cognito.c-med .c-forms-form div {
-    background-color: #b8c8d6 !important;
-}
-
-#tenho-interesse .cognito .c-forms-form .c-forms-form-title h2,
-#tenho-interesse .cognito label[for], .cognito input[type=radio], .cognito input[type=checkbox] {
-    color: #385874;
 }
 
 ol {
@@ -92,21 +68,23 @@ ol {
 ol li {
     font-size: 1.4rem;
     color: #454545;
+
 }
 
 section {
     background-color: #fff;
     display: block;
     float: left;
-    font-size: 1.5rem; /* equivalente a 15px */ 
-    padding: 20px;
     width: 100%;
+    font-size: 1.5rem;
+    padding: 20px;
 }
 
 section nav {
     display: block;
     float: left;
     width: 30%;
+
 }
 
 nav li {
@@ -129,42 +107,28 @@ nav a:hover {
 }
 
 section article {
+    
     display: block;
     float: left;
     width: 70%;
+ 
 }
 
 footer {
-    background-color: #254159;  
+    background-color:#254159;
+    color: #fff;
     display: block;
     float: left;
-    padding: 20px;
     width: 100%;
+    padding: 20px;
 }
 
 footer p {
-    color: #ffffff;
+    color: #fff;
     font-size: 1.4rem;
 }
 
 footer small {
     font-size: 80%;
     display: block;
-}
-
-.cognito {
-    height: 350px !important;
-    overflow: hidden !important;
-}
-
-@media (max-width: 425px) {
-    section nav,
-    section article {
-        width: 100%;
-    }  
-
-    .container {
-        padding-left: 1%;
-        padding-right: 1%;
-    }
 }
