--- a/prontocloud/css/styles.css
+++ b/prontocloud/css/styles.css
@@ -149,3 +149,14 @@ footer small {
     display: block;
 }
 
+@media (max-width:425px) {
+    section nav,
+    section article {
+        width: 100%;
+    }
+
+    .container {
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+}
